# mcp-server-agent

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml  release-please.yml
a2a_invoker/: AGENTS.md  README.md  langgraph_invoker.py  main.py  requirements-langgraph.txt  requirements.txt  test_invoker.py
calculator_agent/: AGENTS.md  Dockerfile  README.md  pyproject.toml
calculator_agent/calculator_agent/: agent.py  auth.py  config.py  context.py  main.py  patches.py  server.py
calculator_agent/tests/: conftest.py  test_agent.py  test_server.py
client/: AGENTS.md  README.md  client.py  mcp_client.py  requirements.txt
server/: AGENTS.md  Dockerfile  README.md  pyproject.toml
server/mcp_calculator/: __main__.py  app.py  auth.py
server/mcp_calculator/tools/: calculator.py
server/tests/: test_calculator.py
