[project]
name = "calculator_agent"
version = "0.1.0"
description = "An intelligent agent using Google ADK and MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk",
    "litellm",
    "mcp",
    "a2a-sdk",
    "uvicorn",
    "starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
